--- a/index.html
+++ b/index.html
@@ -297,10 +297,19 @@
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
                                                 <div class="text-size-medium"> Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
+                                                        cirujano dentista especializado en prostodoncia, graduado de la
+                                                        UNAM
+                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
+                                                        Universidad de Rochester. Desde 2002, mantiene una
+                                                        práctica privada en prostodoncia y es miembro activo de la
+                                                        Asociación Dental Mexicana, el American Prosthodontist Society
+                                                        (Vicepresidente), y el International College of Dentist.
+                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
+                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
+                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
+                                                        conferencista a nivel nacional e internacional.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -318,10 +327,18 @@
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Oscar Vizcarra</div>
                                                 <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Oscar Daniel Vizcarra González es un cirujano
+                                                        dentista de Ciudad Juárez, Chihuahua, especializado en prótesis
+                                                        bucal fija y removible. Graduado de la Universidad Autónoma de
+                                                        Ciudad Juárez, tiene experiencia en diseño de sonrisa,
+                                                        fotografía dental, y tecnología CAD CAM. Ha impartido y
+                                                        participado en conferencias y cursos, destacándose en
+                                                        rehabilitación dental y técnicas de laboratorio. Oscar ha
+                                                        recibido premios y reconocimientos por su excelencia en
+                                                        implantología y prótesis bucal, y domina varios softwares
+                                                        dentales avanzados. Mantiene una práctica privada desde 2016.
+                                                    </p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -337,12 +354,21 @@
                                                     loading="lazy" alt="Sarah Lee" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4">Dr. Manuel Lujan</div>
+                                                <div class="heading-style-h4">Dr. Heber Roberto León Salazar</div>
                                                 <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
+                                                        cirujano dentista especializado en prostodoncia, graduado de la
+                                                        UNAM
+                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
+                                                        Universidad de Rochester. Desde 2002, mantiene una
+                                                        práctica privada en prostodoncia y es miembro activo de la
+                                                        Asociación Dental Mexicana, el American Prosthodontist Society
+                                                        (Vicepresidente), y el International College of Dentist.
+                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
+                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
+                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
+                                                        conferencista a nivel nacional e internacional.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -355,15 +381,25 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790c54ff3d62088f7a1cb_pexels-zen-chung-5745181%20(1).jpg"
-                                                    loading="lazy" alt="Mark Johnson" class="speaker-image img-fluid" />
+                                                    loading="lazy" alt="Dr. Floriberto Calixto Arellanos"
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4">Dr. Manuel Lujan</div>
+                                                <div class="heading-style-h4">Dr. Floriberto Calixto Arellanos</div>
                                                 <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
+                                                        cirujano dentista especializado en prostodoncia, graduado de la
+                                                        UNAM
+                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
+                                                        Universidad de Rochester. Desde 2002, mantiene una
+                                                        práctica privada en prostodoncia y es miembro activo de la
+                                                        Asociación Dental Mexicana, el American Prosthodontist Society
+                                                        (Vicepresidente), y el International College of Dentist.
+                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
+                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
+                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
+                                                        conferencista a nivel nacional e internacional.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -376,15 +412,25 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790cdcf3068bdd2dd0fcf_pexels-karolina-grabowska-8528852%20(1).jpg"
-                                                    loading="lazy" alt="Jane Doe" class="speaker-image img-fluid" />
+                                                    loading="lazy" alt="Dr. Cristian Reyna"
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4">Dr. Manuel Lujan</div>
+                                                <div class="heading-style-h4">Dr. Cristian Reyna</div>
                                                 <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
+                                                        cirujano dentista especializado en prostodoncia, graduado de la
+                                                        UNAM
+                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
+                                                        Universidad de Rochester. Desde 2002, mantiene una
+                                                        práctica privada en prostodoncia y es miembro activo de la
+                                                        Asociación Dental Mexicana, el American Prosthodontist Society
+                                                        (Vicepresidente), y el International College of Dentist.
+                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
+                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
+                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
+                                                        conferencista a nivel nacional e internacional.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -396,16 +442,54 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790d78b0411b210bdc4d3_pexels-ketut-subiyanto-4963418%20(1).jpg"
-                                                    loading="lazy" alt="John Smith" class="speaker-image img-fluid" />
+                                                <img src="assets/Dr-Néstor .jpg" loading="lazy" alt="John Smith"
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4">Dr. Manuel Lujan</div>
+                                                <div class="heading-style-h4">Dr. Néstor Schejtman Plotnik</div>
                                                 <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">Lorem ipsum dolor sit amet, consectetur
-                                                    adipiscing elit. Nunc luctus augue ac orci commodo pellentesque.
-                                                    Donec aliquet, nisi at pellentesque interdum, nisi velit ornare
-                                                    sapien, nec mattis tortor eros a nulla.
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
+                                                        cirujano dentista especializado en prostodoncia, graduado de la
+                                                        UNAM
+                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
+                                                        Universidad de Rochester. Desde 2002, mantiene una
+                                                        práctica privada en prostodoncia y es miembro activo de la
+                                                        Asociación Dental Mexicana, el American Prosthodontist Society
+                                                        (Vicepresidente), y el International College of Dentist.
+                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
+                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
+                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
+                                                        conferencista a nivel nacional e internacional.</p>
+                                                </div>
+                                                <div class="redes-c">
+
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div role="listitem" class="speaker-collection-item w-dyn-item">
+                                        <div class="speaker-item">
+                                            <div class="speaker-image-wrapper">
+                                                <img src="assets/dr-leonardo.jpg" loading="lazy" alt="John Smith"
+                                                    class="speaker-image img-fluid" />
+                                            </div>
+                                            <div class="speaker-content-wrapper">
+                                                <div class="heading-style-h4">Dr. Leonardo Favio Rogel</div>
+                                                <div class="text-size-medium">Titulo</div>
+                                                <div class="speaker-bio-content">
+                                                    <p class="text-bio">Leonardo Favio Rogel Rogel es un técnico dental
+                                                        con más de 23 años de experiencia, radicado en Toluca, México.
+                                                        Fundó su laboratorio dental en 2001, especializado en
+                                                        rehabilitación estética, libre de metal, fija y sobre implantes.
+                                                        Ha impartido diversos cursos sobre maquillaje dental, emax
+                                                        press, y estratificación, destacándose en el uso de productos de
+                                                        Ivoclar. Leonardo ha asistido a seminarios anuales de Ivoclar
+                                                        Vivadent desde 2004 y cuenta con un equipo de trabajo de 9
+                                                        integrantes. Es reconocido por su habilidad en distintas
+                                                        técnicas de laboratorio y fotografía clínica.</p>
                                                 </div>
                                                 <div class="redes-c">
 
