--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="modal fade" id="paymentModal" tabindex="-1" role="dialog" aria-labelledby="paymentModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="modal-content">
+                    <div class="modal-content" style="min-width: fit-content;">
                         <div class="modal-header">
                             <h5 class="modal-title" id="paymentModalLabel">Realizar Pago</h5>
                             <a href="/" id="close" class="close"><i class="fas fa-times"></i></a>
