--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <div>
                                         <label for="telefono"
                                             class="form-label fw-bold text-align-start">Teléfono:</label>
-                                        <input type="tel" id="phone" class="form-control" name="telefono"
+                                        <input required type="tel" id="phone" class="form-control" name="telefono"
                                             placeholder="Ej: +52 (123) 456-7890">
                                     </div>
 
@@ -248,7 +248,10 @@
             <div class="modal fade" id="paymentModal" tabindex="-1" role="dialog" aria-labelledby="paymentModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="modal-content" style="min-width: fit-content;">
+                    <div class="modal-content" style="
+                    min-width: fit-content; 
+                    left: 50%; 
+                    transform: translateX(-50%); ">
                         <div class="modal-header">
                             <h5 class="modal-title" id="paymentModalLabel">Realizar Pago</h5>
                             <a href="/" id="close" class="close"><i class="fas fa-times"></i></a>
