Corrección de itinerario

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                             </div>
                                             <div class="header-infos-wrapper">
                                                 <div class="header-infos-item">
-                                                    <div>Fecha del Evento</div>
+                                                    <div>3 y 4 de Octubre 2024</div>
                                                 </div>
                                                 <div class="header-infos-item">
                                                     <div class="text-uppercase">CENTRO DE EXPOSICIONES
@@ -299,7 +299,7 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
-                                                <div class="text-size-medium"> Titulo</div>
+                                                <div class="text-size-medium"> Cirujano Dentista</div>
                                                 <div class="speaker-bio-content">
                                                     <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
                                                         cirujano dentista especializado en prostodoncia, graduado de la
@@ -329,7 +329,7 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Oscar Vizcarra</div>
-                                                <div class="text-size-medium">Titulo</div>
+                                                <div class="text-size-medium">Cirujano Dentista</div>
                                                 <div class="speaker-bio-content">
                                                     <p class="text-bio">Oscar Daniel Vizcarra González es un cirujano
                                                         dentista de Ciudad Juárez, Chihuahua, especializado en prótesis
@@ -450,7 +450,7 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Néstor Schejtman Plotnik</div>
-                                                <div class="text-size-medium">Titulo</div>
+                                                <div class="text-size-medium">Cirjuano Dentista</div>
                                                 <div class="speaker-bio-content">
                                                     <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
                                                         cirujano dentista especializado en prostodoncia, graduado de la
@@ -481,7 +481,7 @@
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Leonardo Favio Rogel</div>
-                                                <div class="text-size-medium">Titulo</div>
+                                                <div class="text-size-medium">Técnico Dental</div>
                                                 <div class="speaker-bio-content">
                                                     <p class="text-bio">Leonardo Favio Rogel Rogel es un técnico dental
                                                         con más de 23 años de experiencia, radicado en Toluca, México.
@@ -569,7 +569,8 @@
                                         </div>
                                         <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                             class="agenda-content">
-                                            <h3>Conferencia # 2</h3>
+                                            <h3>Remodelación de la Estética Rosa, Cirugía Plástica
+                                                Periodontal</h3>
 
                                             <p>Conferencista: Dr. Heber Roberto León Salazar</p>
                                         </div>
@@ -584,6 +585,19 @@
                                             <div class="margin-bottom margin-xsmall">
                                                 <h3>Comida</h3>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div data-w-id="49babfcc-9d07-d8c3-63f5-1107f8f9a7eb" class="agenda-item">
+                                        <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ec-3863c98b"
+                                            class="agenda-time">
+                                            <div> 15:00 - 18:30 pm</div>
+                                        </div>
+                                        <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
+                                            class="agenda-content">
+                                            <div class="margin-bottom margin-xsmall">
+                                                <h3>Comunicándonos Para un Mejor Resultado</h3>
+                                            </div>
+                                            <p>Conferencista: Dr. Leonardo Vogel</p>
                                         </div>
                                     </div>
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
@@ -606,7 +620,8 @@
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Conferencia # 3</h3>
+                                                <h3>Restauraciones Bio-miméticas en el Segmento
+                                                    Anterior</h3>
                                             </div>
                                             <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                         </div>
@@ -644,15 +659,15 @@
                                         <div id="w-node-e34d5b91-3aba-9615-b8b6-6bf9c5b3e11a-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Conferencia # 1</h3>
+                                                <h3>Conferencia #1</h3>
                                             </div>
-                                            <p>Conferencista: Dr. Oscar Vizcarra</p>
+                                            <p>Conferencista: Dr. Fermin Ocañas</p>
                                         </div>
                                     </div>
                                     <div data-w-id="092b5cf7-288f-355b-4821-e2dbff1fb15c" class="agenda-item">
                                         <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb15d-3863c98b"
                                             class="agenda-time">
-                                            <div> 11:30 - 12:30 pm</div>
+                                            <div> 11:30 - 12:00 pm</div>
                                         </div>
                                         <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                             class="agenda-content">
@@ -669,26 +684,15 @@
                                         <div id="w-node-e43f4d9d-549f-2a50-8a36-32b01124765e-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Conferencia # 2</h3>
+                                                <h3>Neuro Marketing Dental</h3>
                                             </div>
                                             <p>Conferencista: Dr. Cristian Reyna</p>
-                                        </div>
-                                    </div>
-                                    <div data-w-id="7b27f06b-c19d-31f8-9771-1ff04b737f28" class="agenda-item">
-                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f29-3863c98b"
-                                            class="agenda-time">
-                                            <div> 102:00 -113:30 pm</div>
-                                        </div>
-                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
-                                            class="agenda-content">
-                                            <h3>Conferencia # 3</h3>
-                                            <p>Conferencista: Dr. Heber Roberto León Salazar</p>
                                         </div>
                                     </div>
                                     <div data-w-id="d17faf61-0b41-190f-fc7b-8c8bf949ca18" class="agenda-item">
                                         <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca19-3863c98b"
                                             class="agenda-time">
-                                            <div> 13:30 - 15:30 pm</div>
+                                            <div> 13:30 - 15:00 pm</div>
                                         </div>
                                         <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca1c-3863c98b"
                                             class="agenda-content">
@@ -697,29 +701,54 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div data-w-id="7b27f06b-c19d-31f8-9771-1ff04b737f28" class="agenda-item">
+                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f29-3863c98b"
+                                            class="agenda-time">
+                                            <div> 15:00 - 16:30 pm</div>
+                                        </div>
+                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
+                                            class="agenda-content">
+                                            <h3>Remodelación de la Estética rosa, cirugía plástica
+                                                periodontal</h3>
+                                            <p>Conferencista: Dr. Oscar Vizcarra</p>
+                                        </div>
+                                    </div>
+                                    
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011ac-3863c98b"
                                             class="agenda-time">
-                                            <div> 15:30 - 16:00 pm</div>
+                                            <div> 16:30 - 17:00 pm</div>
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Carteles</h3>
+                                                <h3>Receso / Carteles</h3>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div data-w-id="7b27f06b-c19d-31f8-9771-1ff04b737f28" class="agenda-item">
+                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f29-3863c98b"
+                                            class="agenda-time">
+                                            <div> 17:00 - 18:30 pm</div>
+                                        </div>
+                                        <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
+                                            class="agenda-content">
+                                            <h3>Transición de Flujo Analógico a Flujo Digital.
+                                                Curva de Aprendizaje</h3>
+                                            <p>Conferencista: Dr. Nestor Schejtman</p>
                                         </div>
                                     </div>
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011ac-3863c98b"
                                             class="agenda-time">
-                                            <div> 18:00</div>
+                                            <div> 18:30 pm</div>
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3 id="location">Clausura</h3>
+                                                <h3 id="location">Clausura /  Decisión de Jurado de Carteles</h3>
                                             </div>
-                                        </div>
+                                        </div>  
                                     </div>
                                 </div>
                             </div>
