Eliminación de logo y cambio de colores en iconos del footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container-fluid ps-5 pe-2">
                 <div class="logo d-flex justify-content-center justify-content-md-start">
                     <a href="#" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                        <img src="assets/logo2.jpeg" loading="lazy" alt="Logo" class="navbar-logo" />
+                        <img src="" loading="lazy" alt="Logo" class="navbar-logo" />
                     </a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -895,9 +895,6 @@
                     </div>
                 </div>
             </section>
-
-
-
             <section id="faq" class="section-home-faq">
                 <div>
                     <div class="container-small">
@@ -1092,23 +1089,23 @@
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da0157947a068ca9dad2_facebook-logo-duotone.svg"
+                                        <img src="./assets/facebook.png"
                                             loading="lazy" alt="Facebook Icon" class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01a6a5ea3f6c6c2e2a_instagram-logo-duotone.svg"
+                                        <img src="./assets/instagram.png"
                                             loading="lazy" alt="Instagram Icon" class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da0154c51662c8461b93_linkedin-logo-duotone.svg"
+                                        <img src="./assets/linkedin.png"
                                             loading="lazy" alt="Linkedin Icon" class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01e0806a1865576908_twitter-logo-duotone.svg"
+                                        <img src="./assets/twitter.png"
                                             loading="lazy" alt="Twitter Icon" class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/6448da01e0806ad500576907_youtube-logo-duotone.svg"
+                                        <img src="./assets/youtube.png"
                                             loading="lazy" alt="Youtube Icon" class="icon-1x1-small" />
                                     </a>
                                 </div>
