Remover imagenes y logos

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790b852994b3e75d10fad_pexels-los-muertos-crew-10041258%20(1).jpg"
+                                                <img src="./assets/placeholder.jpg"
                                                     loading="lazy" alt="Sarah Lee" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
@@ -383,7 +383,7 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790c54ff3d62088f7a1cb_pexels-zen-chung-5745181%20(1).jpg"
+                                                <img src="./assets/placeholder.jpg"
                                                     loading="lazy" alt="Dr. Floriberto Calixto Arellanos"
                                                     class="speaker-image img-fluid" />
                                             </div>
@@ -414,7 +414,7 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790cdcf3068bdd2dd0fcf_pexels-karolina-grabowska-8528852%20(1).jpg"
+                                                <img src="./assets/placeholder.jpg"
                                                     loading="lazy" alt="Dr. Cristian Reyna"
                                                     class="speaker-image img-fluid" />
                                             </div>
@@ -1073,7 +1073,7 @@
                             <div class="footer-top-wrapper">
                                 <div class="logo-footer">
                                     <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                        <img src="assets/logos.png" loading="lazy" alt="Logo" class="navbar-logo" />
+                                        <img src="" loading="lazy" alt="Logo" class="navbar-logo" />
                                     </a>
                                 </div>
 
